core/codegen/tests/ui-fail-nightly/bad-ignored-segments.stderr
error: parameter must be named
 --> $DIR/bad-ignored-segments.rs:5:11
  |
5 | #[get("/c?<_>")]
  |           ^^^
  |
  = help: use a name such as `_guard` or `_param`

error: parameter must be named
 --> $DIR/bad-ignored-segments.rs:8:22
  |
8 | #[post("/d", data = "<_>")]
  |                      ^^^
  |
  = help: use a name such as `_guard` or `_param`
